// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table user {
  id integer [primary key]
  email text
  hashed_password text
}

Table list {
  id intger [primary key]
  user_id integer
  name varchar(50)
}

Table card {
  id integer [primary key]
  list_id integer
  contents text
}

Table comment {
  id integer [primary key]
  card_id integer
  contents text
}

Ref: user.id > list.user_id
Ref: list.id > card.list_id
Ref: card.id > comment.card_id
